# shoran_cpp

./: CMakeLists.txt  README.md  batch.py  bench.sh  rename.py
session1000/: CMakeLists.txt
session1000/problem100/: p001.twoSum.cpp  p002.addTwoNumbers.cpp  p003.lengthOfLongestSubstring.cpp  p003lengthOfLongestSubstring.cpp  p004findMedianSortedArrays.cpp  p005longestPalindrome.cpp  p006convert.cpp  p008.myAtoi.cpp  p009.isPalindrome.cpp  p010.isMatch.cpp  p010isMatch.cpp  p011.maxArea.cpp  p012.intToRoman.cpp  p013romanToInt.cpp  p014.longestCommonPrefix.cpp  p015.threeSum.cpp  p016.threeSumClosest.cpp  p017.letterCombinations.cpp  p018.fourSum.cpp  p019.removeNthFromEnd.cpp  p020.isValid.cpp  p021.mergeTwoLists.cpp  p022.generateParenthesis.cpp  p023.mergeKLists.cpp  p024.swapPairs.cpp  p025.reverseKGroup.cpp  p026.removeDuplicates.cpp  p027.removeElement.cpp  p028.strStr.cpp  p029.divide.cpp  p030.findSubstring.cpp
session1000/problem1000/: p1000.mergeStones.cpp  p980.uniquePathsIII.cpp
session1000/problem500/: p460.LFUCache.cpp
session1000/problem800/: p753.crackSafe.cpp
session1000/problem900/: p833.findReplaceString.cpp
session2000/: CMakeLists.txt
session2000/problem1100/: p1003.isValid.cpp  p1012.numDupDigitsAtMostN.cpp  p1031.maxSumTwoNoOverlap.cpp  p1036.isEscapePossible.cpp  p1039.minScoreTriangulation.cpp  p1040.numMovesStonesII.cpp  p1043.maxSumAfterPartitioning.cpp  p1053.prevPermOpt1.cpp  p1072.maxEqualRowsAfterFlips.cpp  p1073.addNegabinary.cpp  p1079.numTilePossibilities.cpp  p1080.sufficientSubset.cpp  p1090.largestValsFromLabels.cpp  p1091.shortestPathBinaryMatrix.cpp  p1092.shortestCommonSupersequence.cpp  p1096.braceExpansionII.cpp
session2000/problem1200/: p1105.minHeightShelves.cpp  p1130.mctFromLeafValues.cpp  p1147.longestDecomposition.cpp  p1156.maxRepOpt1.cpp  p1163.lastSubstring.cpp  p1186.maximumSum.cpp  p1187.makeArrayIncreasing.cpp  p1192.criticalConnections.cpp
session2000/problem1300/: p1263.minPushBox.cpp  p1287.minFallingPathSum.cpp
session2000/problem1400/: p1330.maxValueAfterReverse.cpp  p1334.findTheCity.cpp  p1335.minDifficulty.cpp  p1373.maxSumBST.cpp  p1376.numOfMinutes.cpp  p1377.frogPosition.cpp
session2000/problem1500/: p1401.checkOverlap.cpp  p1439.kthSmallest.cpp  p1483.TreeAncestor.cpp  p1494.minNumberOfSemesters.cpp
session2000/problem1600/: p1515.getMinDistSum.cpp  p1590.minSubarray.cpp  p1595.connectTwoGroups.cpp
session2000/problem1700/: p1601.smallestEquivalentString.cpp  p1605.restoreMatrix.cpp  p1626.bestTeamScore.cpp  p1630.checkArithmeticSubarrays.cpp  p1638.countSubstrings.cpp  p1659.getMaxGridHappiness.cpp  p1681.minimumIncompatibility.cpp
session2000/problem1800/: p1761.minTrioDegree.cpp  p1782.countPairs.cpp
session2000/problem1900/: p1851.minInterval.cpp
session2000/problem2000/: p1977.numberOfCombinations.cpp  p1982.recoverArray.cpp
session3000/: CMakeLists.txt
session3000/problem2100/: p2014.longestSubsequenceRepeatedK.cpp
session3000/problem2200/: p2106.maxTotalFruits.cpp  p2127.maximumInvitations.cpp  p2172.maximumANDSum.cpp  p2179.goodTriplets.cpp  p2188.minimumFinishTime.cpp
session3000/problem2300/: p2213.longestRepeating.cpp  p2223.sumScores.cpp  p2227.Encrypter.cpp  p2267.hasValidPath.cpp  p2272.largestVariance.cpp  p2281.totalStrength.cpp  p2286.BookMyShow.cpp
session3000/problem2400/: p2306.distinctNames.cpp  p2322.minimumScore.cpp  p2338.idealArrays.cpp  p2342.maximumSum.cpp  p2348.zeroFilledSubarray.cpp  p2352.equalPairs.cpp  p2353.FoodRatings.cpp  p2359.closestMeetingNode.cpp  p2364.countBadPairs.cpp  p2368.reachableNodes.cpp  p2369.validPartition.cpp  p2370.longestIdealString.cpp  p2375.smallestNumber.cpp  p2376.countSpecialNumbers.cpp  p2382.maximumSegmentSum.cpp  p2385.amountOfTime.cpp  p2386.kSum.cpp  p2390.removeStars.cpp  p2390.stringCount.cpp  p2391.garbageCollection.cpp  p2392.buildMatrix.cpp  p2397.maximumRows.cpp  p2398.maximumRobots.cpp  p2400.numberOfWays.cpp
session3000/problem2500/: p2401.longestNiceSubarray.cpp  p2402.mostBooked.cpp  p2406.minGroups.cpp  p2407.lengthOfLIS.cpp  p2410.matchPlayersAndTrainers.cpp  p2411.smallestSubarrays.cpp  p2414longestContinuousSubstring.cpp  p2416.sumPrefixScores.cpp  p2420.goodIndices.cpp  p2421.numberOfGoodPaths.cpp  p2428.maxSum.cpp  p2429.minimizeXor.cpp  p2432.hardestWorker.cpp  p2434.robotWithString.cpp  p2435.numberOfPaths.cpp  p2438.productQueries.cpp  p2440.componentValue.cpp  p2443.sumOfNumberAndReverse.cpp  p2444.countSubarrays.cpp  p2446.haveConflict.cpp  p2447.subarrayGCD.cpp  p2451.oddString.cpp  p2452.twoEditWords.cpp  p2453.destroyTargets.cpp  p2454.secondGreaterElement.cpp  p2456.mostPopularCreator.cpp  p2457.makeIntegerBeautiful.cpp  p2461.maximumSubarraySum.cpp  p2462.totalCost.cpp  p2463.minimumTotalDistance.cpp  p2466.countGoodStrings.cpp  p2467.mostProfitablePath.cpp  p2468.splitMessage.cpp  p2470.subarrayLCM.cpp  p2472.maxPalindromes.cpp  p2477.minimumFuelCost.cpp  p2478.beautifulPartitions.cpp  p2484.countPalindromes.cpp  p2488.countSubarrays.cpp  p2493.magnificentSets.cpp  (+2 more)
session3000/problem2600/: p2501.longestSquareStreak.cpp  p2502.Allocator.cpp  p2503.maxPoints.cpp  p2508.isPossible.cpp  p2509.cycleLengthQueries.cpp  p2512.topStudents.cpp  p2513.minimizeSet.cpp  p2514.countAnagrams.cpp  p2516.takeCharacters.cpp  p2517.maximumTastiness.cpp  p2518.countPartitions.cpp  p2521.distinctPrimeFactors.cpp  p2522.minimumPartition.cpp  p2523.closestPrimes.cpp  p2527.xorBeauty.cpp  p2528.maxPower.cpp  p2532.findCrossingTime.cpp  p2536.rangeAddQueries.cpp  p2537.countGood.cpp  p2538.maxOutput.cpp  p2547.minCost.cpp  p2551.putMarbles.cpp  p2552.countQuadruplets.cpp  p2555.maximizeWin.cpp  p2561.minCost.cpp  p2563.countFairPairs.cpp  p2564.countFairPairs.cpp  p2565.minimumScore.cpp  p2566.minMaxDifference.cpp  p2567.minimizeSum.cpp  p2569.handleQuery.cpp  p2571.minOperations.cpp  p2572.squareFreeSubsets.cpp  p2573.findTheString.cpp  p2576.maxNumOfMarkedIndices.cpp  p2577.minimumTime.cpp  p2580.countWays.cpp  p2581.rootCount.cpp  p2584.findValidSplit.cpp  (+5 more)
session4000/: CMakeLists.txt
util/: DictTree.h  (+11 more)
(+489 files in other folders)
